force-app/main/default/objects/Evidence_Consequence_Rule__mdt/Evidence_Consequence_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Evidence Consequence Rule</label>
    <pluralLabel>Evidence Consequence Rules</pluralLabel>
</CustomObject>