force-app/main/default/objects/Evidence_Consequence_Rule__mdt/fields/Consequence_Level__c.field-meta.xml
<CustomField>
    <fullName>Consequence_Level__c</fullName>
    <label>Consequence Level</label>
    <type>Text</type>
    <length>40</length>
</CustomField>