force-app/main/default/objects/Evidence_Consequence_Rule__mdt/fields/Match_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Match_Strategy__c</fullName>
    <label>Match Strategy</label>
    <type>Text</type>
    <length>40</length>
</CustomField>