force-app/main/default/objects/Evidence_Consequence_Rule__mdt/fields/Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Value__c</fullName>
    <label>Match Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>